# xTuring

./: .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  data-00000-of-00001.arrow  dataset_info.json  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  state.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  semgrep.yml
docs/: .gitignore  .gitlint  .pre-commit-config.yaml  docusaurus.config.js  package-lock.json  package.json
docs/docs/: about.md  faqs.md  installation.md  intro.md  load_save_models.md  quickstart.md  supported_models.md  tutorials.md
docs/docs/advanced/: _category_.json  advanced.md  anymodel.md  api_server.md  generate.md  pythonapi.md
docs/docs/configuration/: _category_.json  configuration.md  fine_tune_code.jsx  finetune_configure.md  inference_code.jsx  inference_configure.md
docs/docs/contributing/: _category_.json  contributing.md  general_rules.md  how_to_contribute.md  model_contributing.md  pythonapi.md  setting_up.md
docs/docs/datasets/: _category_.json  generate.md  prepare.md  usage.md
docs/docs/finetune/: _category_.json  configure.md  guide.md  test.jsx
docs/docs/inference/: _category_.json  api_server.md  configure.md  guide.md
docs/docs/overview/: _category_.json  installation.md  intro.md  overview.md  supported_models.md
docs/docs/personalization/: _category_.json  fine_tune_code.jsx  finetune_configure.md  inference_code.jsx  inference_configure.md  personalization.md  usage.md
docs/docs/playground/: CLI.md  UI.md  _category_.json  playground.md
docs/src/css/: custom.css
docs/static/js/: botLoader.js  botScript.js
examples/: README.md  dataset_preprocessing.ipynb  gpt-j_instruction_finetuning.ipynb  llama_instruction_finetuning.ipynb  stable-diffusion_instruction_finetuning.ipynb
examples/bloom/: bloom_lora.py  bloom_lora_int8.py
examples/cerebras/: cerebras_lora.ipynb  cerebras_lora.py  cerebras_lora_int8.py
examples/dataset_generation/: create_alpaca_dataset.ipynb  create_instruction_dataset_from_files.ipynb  finance_seed_tasks.jsonl
examples/dataset_generation/finance_self_instruct_openai_davinci_cache_10_5/: is_clf_or_not.jsonl
examples/dataset_generation/sample_finance_data/: text4.txt  text5.txt  text6.txt
examples/dataset_generation/self_instruct_davinci_cache_10_5/: all_generated.jsonl  finetuning.jsonl  is_clf_or_not.jsonl  sampled_generated.jsonl
examples/dataset_generation/self_instruct_openai_davinci_cache_10_5/: all_generated.jsonl  filtered_instructions.jsonl  finetuning.jsonl  machine_generated_instructions.jsonl
examples/datasets/: create_alpaca_dataset.ipynb  preparing_your_dataset.py
examples/datasets/finance_self_instruct_openai_davinci_cache_10_5/: all_generated.jsonl  filtered_instructions.jsonl  finetuning.jsonl  machine_generated_instructions.jsonl  sampled_generated.jsonl
examples/datasets/sample_finance_data/: text1.txt  text2.txt  text3.txt
examples/datasets/self_instruct_openai_davinci_cache_10_5/: all_generated.jsonl  sampled_generated.jsonl
examples/distilgpt2/: distilgpt2_lora.ipynb  distilgpt2_lora.py  distilgpt2_lora_custom_params.ipynb
examples/evaluation/: evaluation.py
examples/features/evaluation/: evaluation.py
examples/features/generic/: generic_lora_model.py  generic_model.py
examples/features/int4_finetuning/: LLaMA_lora_int4.ipynb
examples/generic/: generic_lora_model.py  generic_model.py
examples/gpt2/: gpt2_lora.ipynb  gpt2_lora.py  gpt2_lora_int8.py
examples/gptj/: GPTJ_lora_int8.ipynb  gptj_lora.py  gptj_lora_int8.py
examples/int2-1/: README.md
examples/int2-1/EMEF/: README.md  finetune.py
examples/int2-1/EMEFINT3/: README.md  finetune.py  job.sh  setup.py
examples/int2-1/LREC/: README.md  c4eval.py  eval.py  (+5 more)
examples/int4_finetuning/: LLaMA_lora_int4.ipynb  README.md
examples/llama/: LLaMA_lora_int8.ipynb  llama.py  llama_lora.py  llama_lora_int8.py  llama_lrec.ipynb  preparing_your_dataset.py
examples/llama_lora_alpaca/: llama_alpaca.py  llama_lora_alcapa.py
examples/opt/: opt_evaluate.py  opt_lora_int8.py
examples/playground_ui/: gpt2_lora_playground.py
src/turing/: registry.py
src/xturing/: __init__.py  registry.py
tests/: tests.ipynb
(+204 files in other folders)
